Fixed Month Picker Calendar Display causing White Space below footer

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 
 /* Fill the page with 100vh at least, 60px is the size of the footer */
 .minimum-height {
-    min-height: calc(100vh - 112px)
+    min-height: calc(100vh - 104px)
 }
 
 /* For Transactions Tables pagination on the bottom */
